--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "lint": "eslint --cache \"**/*.{js,jsx,ts,tsx}\"",
-    "lint:fix": "npm run lint -- --fix",
+    "lint:fix": "yarn lint -- --fix",
+    "pre-commit": "",
     "format": "prettier --config .prettierrc --write \"**/*.{js,jsx,ts,tsx,json}\"",
     "format:diff": "prettier --config .prettierrc --check \"**/*.{js,jsx,ts,tsx,json}\""
   },
@@ -37,10 +38,5 @@
     "*.{md,mdx}": [
       "prettier --write"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged --allow-empty"
-    }
   }
 }
