--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bootstrap": "lerna bootstrap",
     "lint": "eslint --cache \"**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "yarn lint -- --fix",
-    "pre-commit": "",
+    "pre-commit": "npx lint-staged@latest --allow-empty",
     "format": "prettier --config .prettierrc --write \"**/*.{js,jsx,ts,tsx,json}\"",
     "format:diff": "prettier --config .prettierrc --check \"**/*.{js,jsx,ts,tsx,json}\""
   },
@@ -26,7 +26,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.2",
     "lerna": "^4.0.0",
-    "lint-staged": "^11.1.2",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5"
   },
