--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "lint": "eslint --cache \"**/*.{js,jsx,ts,tsx}\"",
-    "lint:fix": "yarn lint -- --fix",
+    "lint:fix": "yarn lint --fix",
+    "modelforge": "modelforge -- contrib",
     "format": "prettier --config .prettierrc --write \"**/*.{js,jsx,ts,tsx,json}\"",
     "format:diff": "prettier --config .prettierrc --check \"**/*.{js,jsx,ts,tsx,json}\""
   },
@@ -23,11 +24,16 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.2",
+    "husky": "^4.3.8",
     "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged --allow-empty"
+    }
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
