--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --cache \"**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "yarn lint --fix",
     "modelforge": "modelforge -- contrib",
+    "prepare": "husky install",
     "format": "prettier --config .prettierrc --write \"**/*.{js,jsx,ts,tsx,json}\"",
     "format:diff": "prettier --config .prettierrc --check \"**/*.{js,jsx,ts,tsx,json}\""
   },
@@ -17,6 +18,7 @@
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -31,6 +33,16 @@
     "lint-staged": "^10.5.4",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+    }
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
