--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.3.8",
+    "husky": "4.3.8",
     "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.3.2",
